--- a/processing_test.ipynb
+++ b/processing_test.ipynb
@@ -890,7 +890,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output.to_csv(\"SS3_c57_UMIs_concat_bounds.csv\")"
+    "#output.to_csv(\"SS3_c57_UMIs_concat_bounds.csv\")"
    ]
   },
   {
@@ -1521,7 +1521,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output.to_csv(\"Data/SS3_c57_UMIs_concat_G1_bounds_full.csv\")"
+    "#output.to_csv(\"Data/SS3_c57_UMIs_concat_G1_bounds_full.csv\")"
    ]
   }
  ],
