--- a/birth_death_reaction.ipynb
+++ b/birth_death_reaction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1666,6 +1666,163 @@
     "ax.fill_between(equation,lbs,ubs)\n",
     "ax.axhline(k1, color=\"red\",label=f\"True k1 = {k1}\")\n",
     "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Additional constraint\n",
+    "\n",
+    "The stationary distribution p is, of course, a distribution and so we have $0\\le p(x)\\le 1$ but also $ \\sum_{x} p(x) = 1 $, which when truncating to a subset of the state space T gives: $ \\sum_{x \\in T} p(x) \\le 1 $\n",
+    "\n",
+    "So far we have ensured $ p(x) \\in [0,1]$ (equivalently $ z_{r} \\in [0, k_{r}]$) by using bootstrap confidence intervals for each p(x), which are guaranteed to be stricter than [0,1]. However, we have not explicity constrained the sum of p(x)'s, so now add and test for improvements:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def birth_death_LP_add(indices, pl, pu, printing=False):\n",
+    "    \"\"\"\n",
+    "    indices = list of indices of equations/rows of Q to use for constraints\n",
+    "    NOTE: index equations from zero\n",
+    "    pl = array of lower bounds on p (enough for equations used)\n",
+    "    pu = array of upper bounds on p ( == )\n",
+    "\n",
+    "    returns:\n",
+    "    lower bound on k1\n",
+    "    upper bound on k1\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # number of equations used (rows of Q) = largest equation index (+1)\n",
+    "    N = max(indices) + 1\n",
+    "\n",
+    "    # NOTE: define one extra row and cut off, since square matrix would leave out\n",
+    "    # upper diagonal elements on Nth row\n",
+    "\n",
+    "    # create Qr matrices\n",
+    "    Q1 = (np.diag([-1 for x in range(0,N+1)],0) + np.diag([1 for x in range(0,N)],-1))[:-1, :]\n",
+    "    Q2 = (np.diag([-x for x in range(0,N+1)],0) + np.diag([x for x in range(1,N+1)],1))[:-1, :]\n",
+    "\n",
+    "    # set rows to zero if equations not wanted\n",
+    "    for i in range(N):\n",
+    "        if i not in indices:\n",
+    "            Q1[i,:] = 0\n",
+    "            Q2[i,:] = 0\n",
+    "\n",
+    "    # NOTE: add error for when pl, pu too small for number of equations\n",
+    "    # equation i involves p(i + 1)\n",
+    "    # so max index i => need bounds on p(i + 1), need length i + 2 = N + 1 pl/pu\n",
+    "\n",
+    "    # define bounds \n",
+    "    pl = np.array(pl)[:N + 1]\n",
+    "    pu = np.array(pu)[:N + 1]\n",
+    "\n",
+    "    # NOTE: truncate to N + 1, as tridiagonal, so Nth equation has N+1 p's\n",
+    "\n",
+    "    # Construct the problem.\n",
+    "    k1 = cv.Variable(1)\n",
+    "    k2 = 1\n",
+    "    z1 = cv.Variable(N + 1)\n",
+    "    z2 = cv.Variable(N + 1)\n",
+    "    objective_max = cv.Maximize(k1)\n",
+    "    objective_min = cv.Minimize(k1)\n",
+    "    constraints = [Q1 @ z1 + Q2 @ z2 == 0,\n",
+    "                k1 >= 0,\n",
+    "                z1 >= k1 * pl,\n",
+    "                z1 <= k1 * pu,\n",
+    "                z2 >= k2 * pl,\n",
+    "                z2 <= k2 * pu,\n",
+    "                sum([z1[x] for x in range(N + 1)]) <= k1,\n",
+    "                sum([z2[x] for x in range(N + 1)]) <= k2]\n",
+    "    prob_max = cv.Problem(objective_max, constraints)\n",
+    "    prob_min = cv.Problem(objective_min, constraints)   \n",
+    "\n",
+    "    # Print result.\n",
+    "    result_max = prob_max.solve()\n",
+    "    if printing:\n",
+    "        print(\"\\nThe upper bound is\", prob_max.value)\n",
+    "        print(\"A solution k1 is\")\n",
+    "        print(k1.value)\n",
+    "    max_bound = k1.value\n",
+    "    result_min = prob_min.solve()\n",
+    "    if printing:\n",
+    "        print(\"\\nThe lower bound is\", prob_min.value)\n",
+    "        print(\"A solution k1 is\")\n",
+    "        print(k1.value)\n",
+    "    min_bound = k1.value\n",
+    "    \n",
+    "    return prob_min.value, prob_max.value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Existing bounds:\n",
+      "\n",
+      "The upper bound is 5.555555556154908\n",
+      "A solution k1 is\n",
+      "[5.55555556]\n",
+      "\n",
+      "The lower bound is 4.586666661786943\n",
+      "A solution k1 is\n",
+      "[4.58666666]\n",
+      "New bounds:\n",
+      "\n",
+      "The upper bound is 5.55555555988336\n",
+      "A solution k1 is\n",
+      "[5.55555556]\n",
+      "\n",
+      "The lower bound is 4.586666651958685\n",
+      "A solution k1 is\n",
+      "[4.58666665]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\willi\\Documents\\Year 4 Project Work\\Proj_venv\\lib\\site-packages\\cvxpy\\reductions\\solvers\\solving_chain.py:336: FutureWarning: \n",
+      "    Your problem is being solved with the ECOS solver by default. Starting in \n",
+      "    CVXPY 1.5.0, Clarabel will be used as the default solver instead. To continue \n",
+      "    using ECOS, specify the ECOS solver explicitly using the ``solver=cp.ECOS`` \n",
+      "    argument to the ``problem.solve`` method.\n",
+      "    \n",
+      "  warnings.warn(ECOS_DEPRECATION_MSG, FutureWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create confidence intervals\n",
+    "k1 = 5\n",
+    "x_max = 12\n",
+    "estimates, intervals = bootstrap([x for x in range(x_max)],0,[k1,1],100,2000,2000)\n",
+    "\n",
+    "# create bounds on p\n",
+    "pl = [intv[0] for intv in intervals]\n",
+    "pu = [intv[1] for intv in intervals]\n",
+    "\n",
+    "# use as bounds for BD LP\n",
+    "print(\"Existing bounds:\")\n",
+    "lb, ub = birth_death_LP([0, 1, 2, 3, 4],pl,pu,printing=True)\n",
+    "print(\"New bounds:\")\n",
+    "lb_add, ub_add = birth_death_LP_add([0, 1, 2, 3, 4],pl,pu,printing=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In such a simple case we do not see any improvement in bounds, but it is still important to include these constraints and it will likely help in more complicated settings."
    ]
   }
  ],
