Example program to check gruobi installed and is working

--- a/non_linear_prog.ipynb
+++ b/non_linear_prog.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3248,6 +3248,40 @@
    "source": [
     "# solve using data, fixing parameters\n",
     "solutions = gene_optimize_2(6, intervals_marginal, k1 = 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Gurobi\n",
+    "\n",
+    "Using cvxpy allows different solvers to be passed as an option when solving"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "optimal value with GUROBI: 6.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example problem\n",
+    "x = cv.Variable(2)\n",
+    "obj = cv.Minimize(x[0] + cv.norm(x, 1))\n",
+    "constraints = [x >= 2]\n",
+    "prob = cv.Problem(obj, constraints)\n",
+    "\n",
+    "# Solve with GUROBI.\n",
+    "prob.solve(solver=cv.GUROBI)\n",
+    "print(\"optimal value with GUROBI:\", prob.value)"
    ]
   }
  ],
