Gurobi testing code

--- a/non_linear_prog.ipynb
+++ b/non_linear_prog.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3261,27 +3261,289 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "optimal value with GUROBI: 6.0\n"
+      "optimal value with GUROBI: 4.0\n"
      ]
     }
    ],
    "source": [
     "# Example problem\n",
     "x = cv.Variable(2)\n",
-    "obj = cv.Minimize(x[0] + cv.norm(x, 1))\n",
+    "obj = cv.Minimize(x[0] + x[1])\n",
     "constraints = [x >= 2]\n",
     "prob = cv.Problem(obj, constraints)\n",
     "\n",
     "# Solve with GUROBI.\n",
     "prob.solve(solver=cv.GUROBI)\n",
     "print(\"optimal value with GUROBI:\", prob.value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However, cvxpy only supports convex optimization problems and without linearising the problems are not convex. Need to implement directly through the Gurobi python API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gurobipy as gp\n",
+    "from gurobipy import GRB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gurobi Optimizer version 11.0.0 build v11.0.0rc2 (win64 - Windows 11.0 (22621.2))\n",
+      "\n",
+      "CPU model: Intel(R) Core(TM) i5-1035G1 CPU @ 1.00GHz, instruction set [SSE2|AVX|AVX2|AVX512]\n",
+      "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
+      "\n",
+      "Optimize a model with 2 rows, 2 columns and 4 nonzeros\n",
+      "Model fingerprint: 0xb31f5e4a\n",
+      "Variable types: 0 continuous, 2 integer (2 binary)\n",
+      "Coefficient statistics:\n",
+      "  Matrix range     [1e+00, 2e+00]\n",
+      "  Objective range  [1e+00, 2e+00]\n",
+      "  Bounds range     [1e+00, 1e+00]\n",
+      "  RHS range        [1e+00, 4e+00]\n",
+      "Found heuristic solution: objective 3.0000000\n",
+      "Presolve removed 2 rows and 2 columns\n",
+      "Presolve time: 0.00s\n",
+      "Presolve: All rows and columns removed\n",
+      "\n",
+      "Explored 0 nodes (0 simplex iterations) in 0.02 seconds (0.00 work units)\n",
+      "Thread count was 1 (of 8 available processors)\n",
+      "\n",
+      "Solution count 2: 4 3 \n",
+      "\n",
+      "Optimal solution found (tolerance 1.00e-04)\n",
+      "Best objective 4.000000000000e+00, best bound 4.000000000000e+00, gap 0.0000%\n",
+      "x = 0.0\n",
+      "y = 1.0\n",
+      "Objective = 4.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create a model\n",
+    "m = gp.Model(\"model1\")\n",
+    "\n",
+    "# create variables\n",
+    "x = m.addVar(vtype=GRB.BINARY, name=\"x\")\n",
+    "y = m.addVar(vtype=GRB.BINARY, name=\"y\")\n",
+    "\n",
+    "# add constraints\n",
+    "m.addConstr(x + 2 * y <= 4, name=\"c0\")\n",
+    "m.addConstr(x + y <= 1, name=\"c1\")\n",
+    "\n",
+    "# set objective\n",
+    "m.setObjective(x + 2 * y + 2, sense=GRB.MAXIMIZE)\n",
+    "\n",
+    "# optimize (solve)\n",
+    "m.optimize()\n",
+    "\n",
+    "# get variables: name, value\n",
+    "for v in m.getVars():\n",
+    "    print(f\"{v.VarName} = {v.X}\")\n",
+    "# get objective value\n",
+    "print(f\"Objective = {m.ObjVal}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Matrix variables and constraints:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gurobi Optimizer version 11.0.0 build v11.0.0rc2 (win64 - Windows 11.0 (22621.2))\n",
+      "\n",
+      "CPU model: Intel(R) Core(TM) i5-1035G1 CPU @ 1.00GHz, instruction set [SSE2|AVX|AVX2|AVX512]\n",
+      "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
+      "\n",
+      "Optimize a model with 2 rows, 3 columns and 6 nonzeros\n",
+      "Model fingerprint: 0xaf01f4f9\n",
+      "Coefficient statistics:\n",
+      "  Matrix range     [1e+00, 2e+00]\n",
+      "  Objective range  [1e+00, 2e+00]\n",
+      "  Bounds range     [0e+00, 0e+00]\n",
+      "  RHS range        [1e+00, 2e+00]\n",
+      "Presolve time: 0.03s\n",
+      "Presolved: 2 rows, 3 columns, 6 nonzeros\n",
+      "\n",
+      "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
+      "       0    6.0000000e+30   5.000000e+30   6.000000e+00      0s\n",
+      "       1    2.0000000e+00   0.000000e+00   0.000000e+00      0s\n",
+      "\n",
+      "Solved in 1 iterations and 0.04 seconds (0.00 work units)\n",
+      "Optimal objective  2.000000000e+00\n",
+      "x[0] = 0.0\n",
+      "x[1] = 0.0\n",
+      "x[2] = 1.0\n",
+      "Objective = 2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create a model\n",
+    "m = gp.Model(\"model2\")\n",
+    "\n",
+    "# create vector variable\n",
+    "x = m.addMVar(shape=3, vtype=GRB.CONTINUOUS, name=\"x\")\n",
+    "\n",
+    "# create matrix constraint\n",
+    "A = np.array([[1.0, 2.0, 1.0], [2.0, 1.0, 1.0]])\n",
+    "b = np.array([1.0, 2.0])\n",
+    "m.addConstr(A @ x <= b, name=\"c\")\n",
+    "\n",
+    "# create objective\n",
+    "v = np.array([1.0, 1.0, 2.0])\n",
+    "m.setObjective(v @ x, GRB.MAXIMIZE)\n",
+    "\n",
+    "# optimize (solve)\n",
+    "m.optimize()\n",
+    "\n",
+    "# get variable: name, value\n",
+    "for v in m.getVars():\n",
+    "    print(f\"{v.VarName} = {v.X}\")\n",
+    "# get objective value\n",
+    "print(f\"Objective = {m.ObjVal}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Modify program after solution: change objective, min to max, etc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gurobi Optimizer version 11.0.0 build v11.0.0rc2 (win64 - Windows 11.0 (22621.2))\n",
+      "\n",
+      "CPU model: Intel(R) Core(TM) i5-1035G1 CPU @ 1.00GHz, instruction set [SSE2|AVX|AVX2|AVX512]\n",
+      "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
+      "\n",
+      "Optimize a model with 1 rows, 2 columns and 2 nonzeros\n",
+      "Model fingerprint: 0x3d3b37f7\n",
+      "Variable types: 0 continuous, 2 integer (2 binary)\n",
+      "Coefficient statistics:\n",
+      "  Matrix range     [1e+00, 1e+00]\n",
+      "  Objective range  [1e+00, 1e+00]\n",
+      "  Bounds range     [1e+00, 1e+00]\n",
+      "  RHS range        [3e+00, 3e+00]\n",
+      "Found heuristic solution: objective 1.0000000\n",
+      "\n",
+      "Explored 0 nodes (0 simplex iterations) in 0.02 seconds (0.00 work units)\n",
+      "Thread count was 1 (of 8 available processors)\n",
+      "\n",
+      "Solution count 1: 1 \n",
+      "\n",
+      "Optimal solution found (tolerance 1.00e-04)\n",
+      "Best objective 1.000000000000e+00, best bound 1.000000000000e+00, gap 0.0000%\n",
+      "x = 1.0\n",
+      "y = -0.0\n",
+      "Objective = 1.0\n",
+      "Gurobi Optimizer version 11.0.0 build v11.0.0rc2 (win64 - Windows 11.0 (22621.2))\n",
+      "\n",
+      "CPU model: Intel(R) Core(TM) i5-1035G1 CPU @ 1.00GHz, instruction set [SSE2|AVX|AVX2|AVX512]\n",
+      "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
+      "\n",
+      "Optimize a model with 1 rows, 2 columns and 2 nonzeros\n",
+      "Model fingerprint: 0x1e9ab9d3\n",
+      "Variable types: 0 continuous, 2 integer (2 binary)\n",
+      "Coefficient statistics:\n",
+      "  Matrix range     [1e+00, 1e+00]\n",
+      "  Objective range  [1e+00, 1e+00]\n",
+      "  Bounds range     [1e+00, 1e+00]\n",
+      "  RHS range        [3e+00, 3e+00]\n",
+      "\n",
+      "Loaded MIP start from previous solve with objective -0\n",
+      "\n",
+      "Presolve removed 1 rows and 2 columns\n",
+      "Presolve time: 0.00s\n",
+      "Presolve: All rows and columns removed\n",
+      "\n",
+      "Explored 0 nodes (0 simplex iterations) in 0.03 seconds (0.00 work units)\n",
+      "Thread count was 1 (of 8 available processors)\n",
+      "\n",
+      "Solution count 2: 1 -0 \n",
+      "\n",
+      "Optimal solution found (tolerance 1.00e-04)\n",
+      "Best objective 1.000000000000e+00, best bound 1.000000000000e+00, gap 0.0000%\n",
+      "x = 0.0\n",
+      "y = 1.0\n",
+      "Objective = 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create a model\n",
+    "m = gp.Model(\"model3\")\n",
+    "\n",
+    "# create variables\n",
+    "x = m.addVar(vtype=GRB.BINARY, name=\"x\")\n",
+    "y = m.addVar(vtype=GRB.BINARY, name=\"y\")\n",
+    "\n",
+    "# add constraints\n",
+    "m.addConstr(x + y <= 3, name=\"c\")\n",
+    "\n",
+    "# set objective\n",
+    "m.setObjective(x, sense=GRB.MAXIMIZE)\n",
+    "\n",
+    "# optimize (solve)\n",
+    "m.optimize()\n",
+    "\n",
+    "# get variables: name, value\n",
+    "for v in m.getVars():\n",
+    "    print(f\"{v.VarName} = {v.X}\")\n",
+    "# get objective value\n",
+    "print(f\"Objective = {m.ObjVal}\")\n",
+    "\n",
+    "# change objective\n",
+    "m.setObjective(y, sense=GRB.MAXIMIZE)\n",
+    "\n",
+    "# optimize (re-solve)\n",
+    "m.optimize()\n",
+    "\n",
+    "# get variables: name, value\n",
+    "for v in m.getVars():\n",
+    "    print(f\"{v.VarName} = {v.X}\")\n",
+    "# get objective value\n",
+    "print(f\"Objective = {m.ObjVal}\")\n"
    ]
   }
  ],
