Test indexing gurobi Mvar.

--- a/non_linear_prog.ipynb
+++ b/non_linear_prog.ipynb
@@ -3375,38 +3375,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gurobi Optimizer version 11.0.0 build v11.0.0rc2 (win64 - Windows 11.0 (22621.2))\n",
+      "Gurobi Optimizer version 11.0.0 build v11.0.0rc2 (win64 - Windows 11+.0 (22631.2))\n",
       "\n",
       "CPU model: Intel(R) Core(TM) i5-1035G1 CPU @ 1.00GHz, instruction set [SSE2|AVX|AVX2|AVX512]\n",
       "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
       "\n",
       "Optimize a model with 2 rows, 3 columns and 6 nonzeros\n",
-      "Model fingerprint: 0xaf01f4f9\n",
+      "Model fingerprint: 0x6c72d535\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 2e+00]\n",
-      "  Objective range  [1e+00, 2e+00]\n",
+      "  Objective range  [1e+00, 1e+00]\n",
       "  Bounds range     [0e+00, 0e+00]\n",
       "  RHS range        [1e+00, 2e+00]\n",
-      "Presolve time: 0.03s\n",
-      "Presolved: 2 rows, 3 columns, 6 nonzeros\n",
-      "\n",
+      "Presolve removed 2 rows and 3 columns\n",
+      "Presolve time: 0.01s\n",
+      "Presolve: All rows and columns removed\n",
       "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
-      "       0    6.0000000e+30   5.000000e+30   6.000000e+00      0s\n",
-      "       1    2.0000000e+00   0.000000e+00   0.000000e+00      0s\n",
+      "       0    1.0000000e+00   0.000000e+00   0.000000e+00      0s\n",
       "\n",
-      "Solved in 1 iterations and 0.04 seconds (0.00 work units)\n",
-      "Optimal objective  2.000000000e+00\n",
+      "Solved in 0 iterations and 0.02 seconds (0.00 work units)\n",
+      "Optimal objective  1.000000000e+00\n",
       "x[0] = 0.0\n",
       "x[1] = 0.0\n",
       "x[2] = 1.0\n",
-      "Objective = 2.0\n"
+      "Objective = 1.0\n"
      ]
     }
    ],
@@ -3424,7 +3423,7 @@
     "\n",
     "# create objective\n",
     "v = np.array([1.0, 1.0, 2.0])\n",
-    "m.setObjective(v @ x, GRB.MAXIMIZE)\n",
+    "m.setObjective(x[2], GRB.MAXIMIZE)\n",
     "\n",
     "# optimize (solve)\n",
     "m.optimize()\n",
@@ -3445,14 +3444,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gurobi Optimizer version 11.0.0 build v11.0.0rc2 (win64 - Windows 11.0 (22621.2))\n",
+      "Set parameter Username\n",
+      "Academic license - for non-commercial use only - expires 2025-01-10\n",
+      "Gurobi Optimizer version 11.0.0 build v11.0.0rc2 (win64 - Windows 11+.0 (22631.2))\n",
       "\n",
       "CPU model: Intel(R) Core(TM) i5-1035G1 CPU @ 1.00GHz, instruction set [SSE2|AVX|AVX2|AVX512]\n",
       "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
@@ -3467,7 +3468,7 @@
       "  RHS range        [3e+00, 3e+00]\n",
       "Found heuristic solution: objective 1.0000000\n",
       "\n",
-      "Explored 0 nodes (0 simplex iterations) in 0.02 seconds (0.00 work units)\n",
+      "Explored 0 nodes (0 simplex iterations) in 0.01 seconds (0.00 work units)\n",
       "Thread count was 1 (of 8 available processors)\n",
       "\n",
       "Solution count 1: 1 \n",
@@ -3477,7 +3478,7 @@
       "x = 1.0\n",
       "y = -0.0\n",
       "Objective = 1.0\n",
-      "Gurobi Optimizer version 11.0.0 build v11.0.0rc2 (win64 - Windows 11.0 (22621.2))\n",
+      "Gurobi Optimizer version 11.0.0 build v11.0.0rc2 (win64 - Windows 11+.0 (22631.2))\n",
       "\n",
       "CPU model: Intel(R) Core(TM) i5-1035G1 CPU @ 1.00GHz, instruction set [SSE2|AVX|AVX2|AVX512]\n",
       "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
@@ -3497,7 +3498,7 @@
       "Presolve time: 0.00s\n",
       "Presolve: All rows and columns removed\n",
       "\n",
-      "Explored 0 nodes (0 simplex iterations) in 0.03 seconds (0.00 work units)\n",
+      "Explored 0 nodes (0 simplex iterations) in 0.02 seconds (0.00 work units)\n",
       "Thread count was 1 (of 8 available processors)\n",
       "\n",
       "Solution count 2: 1 -0 \n",
