Testing data performance.

--- a/upscaling_analysis.ipynb
+++ b/upscaling_analysis.ipynb
@@ -6358,16 +6358,11 @@
    "source": [
     "So we see that for real data samples with low capture efficiencies (BayNorm estimate with mean 0.06) it is beneficial to compute an average B matrix across all betas, compared to simply using the mean for a single matrix. However, the performance is not terrible when using just a preset value of 0.06 (empirically shown to be good), so it may still be useful, especially since no extra work such as running BayNorm needs to be done."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Proj_venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
