Fixed categorization of results, included flat ub category.

--- a/results_analysis.ipynb
+++ b/results_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,9 @@
     "import time\n",
     "import gurobipy as gp\n",
     "from gurobipy import GRB\n",
-    "from ast import literal_eval"
+    "from ast import literal_eval\n",
+    "import plotly\n",
+    "import plotly.graph_objects as go"
    ]
   },
   {
@@ -27,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +309,7 @@
        "[5 rows x 142 columns]"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +560,7 @@
        "[5 rows x 155 columns]"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +818,7 @@
        "[5 rows x 194 columns]"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1062,7 @@
        "[5 rows x 121 columns]"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1104,9 +1106,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MME_MU</th>\n",
+       "      <th>MME_SIZE</th>\n",
+       "      <th>B_EST</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0610007P14Rik</th>\n",
+       "      <td>43.798180</td>\n",
+       "      <td>0.648610</td>\n",
+       "      <td>67.526236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0610009B22Rik</th>\n",
+       "      <td>70.083391</td>\n",
+       "      <td>0.999097</td>\n",
+       "      <td>70.146768</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0610031J06Rik</th>\n",
+       "      <td>264.721377</td>\n",
+       "      <td>3.455259</td>\n",
+       "      <td>76.614040</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1110007C09Rik</th>\n",
+       "      <td>68.418706</td>\n",
+       "      <td>0.636294</td>\n",
+       "      <td>107.526887</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1110012L19Rik</th>\n",
+       "      <td>16.987593</td>\n",
+       "      <td>0.439295</td>\n",
+       "      <td>38.670142</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   MME_MU  MME_SIZE       B_EST\n",
+       "0610007P14Rik   43.798180  0.648610   67.526236\n",
+       "0610009B22Rik   70.083391  0.999097   70.146768\n",
+       "0610031J06Rik  264.721377  3.455259   76.614040\n",
+       "1110007C09Rik   68.418706  0.636294  107.526887\n",
+       "1110012L19Rik   16.987593  0.439295   38.670142"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# load prior estimates\n",
     "prior_cast_concat = pd.read_csv(\"..\\Final_data\\prior_cast_concat.csv\", index_col=\"Unnamed: 0\")\n",
@@ -1126,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1144,7 +1221,7 @@
     "            upper.append(bound[1])\n",
     "            labels.append(f'mu_{i + 1}')\n",
     "            if b_est:\n",
-    "                baynorm_est.append((1 / b_est) * (1 - 1 / b_est)**i)\n",
+    "                baynorm_est.append((1 / b_est) * (1 - (1 / b_est))**i)\n",
     "        except:\n",
     "            break\n",
     "    # plot\n",
@@ -1164,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1266,402 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feasible / Infeasible"
+    "## Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def categorize(data, priors, zero_tolerance=10**(-2), monotone_tolerance=10**(-2), baynorm_tolerance=10**(-2)):\n",
+    "    \n",
+    "    def zero_lb(row, tolerance=zero_tolerance):\n",
+    "        \"\"\"Boolean indicator: all lower bounds within tolerance of 0\"\"\"\n",
+    "        # return nan if infeasible\n",
+    "        if row['k1'][0] is None:\n",
+    "            return np.nan\n",
+    "        # examine mu bounds\n",
+    "        for bounds in row[2:]:\n",
+    "            try:\n",
+    "                lb = bounds[0]\n",
+    "                if lb > tolerance:\n",
+    "                    # exists a lower bound outside tolerance of zero\n",
+    "                    return False\n",
+    "            except:\n",
+    "                # nan: mu not estimated\n",
+    "                break\n",
+    "        # no faults found: return True\n",
+    "        return True\n",
+    "\n",
+    "    def monotone_ub(row, decreasing=True, tolerance=monotone_tolerance):\n",
+    "        \"\"\"\n",
+    "        Boolean indicator if upper bounds of dist. are montone (weakly)\n",
+    "\n",
+    "        row: row of data containing lists of bounds on parameters + nan values\n",
+    "        decreasing:\n",
+    "            (True) return bool of whether upper bounds are weakly decreasing\n",
+    "            (False) return bool of whether upper bounds are weakly increasing\n",
+    "        \"\"\"\n",
+    "        if decreasing:\n",
+    "            # arbitrary high value\n",
+    "            ub_prev = 10\n",
+    "        else:\n",
+    "            # arbitrarily low value\n",
+    "            ub_prev = -10\n",
+    "        # return nan if infeasible\n",
+    "        if row['k1'][0] is None:\n",
+    "            return np.nan\n",
+    "        # examine mu bounds\n",
+    "        for bounds in row[2:]:\n",
+    "            try:\n",
+    "                ub = bounds[1]\n",
+    "                # if ub increases by more than tolerance => not decreasing\n",
+    "                if ub > ub_prev + tolerance and decreasing:\n",
+    "                    return False\n",
+    "                # if ub decreases by more than tolerance => not increasing\n",
+    "                elif ub < ub_prev - tolerance and not decreasing:\n",
+    "                    return False\n",
+    "                else:\n",
+    "                    ub_prev = ub\n",
+    "            except:\n",
+    "                # nan: mu not estimated\n",
+    "                break\n",
+    "        # no faults found: return True\n",
+    "        return True\n",
+    "\n",
+    "    def baynorm_agreement(row, tolerance=baynorm_tolerance):\n",
+    "        \"\"\"Boolean indicator if baynorm estimated burst dist within bounds\"\"\"\n",
+    "        # return nan if infeasible\n",
+    "        if row['k1'][0] is None:\n",
+    "            return np.nan\n",
+    "        # baynorm estimate\n",
+    "        idx = row.name\n",
+    "        b_est = priors.iloc[idx]['B_EST']\n",
+    "        # examine mu bounds\n",
+    "        for i, bounds in enumerate(row[2:]):\n",
+    "            try:\n",
+    "                lb = bounds[0]\n",
+    "                ub = bounds[1]\n",
+    "                dist = (1 / b_est) * (1 - (1 / b_est))**i\n",
+    "                if lb > dist + tolerance or dist > ub + tolerance:\n",
+    "                    # dist outside of tolerance of bounds\n",
+    "                    return False\n",
+    "            except:\n",
+    "                # nan: mu not estimated\n",
+    "                break\n",
+    "        # no faults found: return True\n",
+    "        return True\n",
+    "\n",
+    "    # create dataframe\n",
+    "    data_categories = pd.DataFrame()\n",
+    "\n",
+    "    # boolean: infeasible bounds\n",
+    "    mask_infeasible = data['k1'].apply(lambda x: None in x)\n",
+    "    data_categories[\"infeasible\"] = mask_infeasible\n",
+    "\n",
+    "    # boolean: zero lower bounds\n",
+    "    mask_zero = data.apply(zero_lb, axis='columns')\n",
+    "    data_categories[\"zero_lb\"] = mask_zero\n",
+    "\n",
+    "    # boolean: monotone (increasing/decreasing) bounds\n",
+    "    mask_dec = data.apply(monotone_ub, args=(True,), axis='columns')\n",
+    "    mask_inc = data.apply(monotone_ub, args=(False,), axis='columns')\n",
+    "    data_categories[\"decreasing_ub\"] = mask_dec\n",
+    "    data_categories[\"increasing_ub\"] = mask_inc\n",
+    "\n",
+    "    # boolean: consistent with baynorm estimate\n",
+    "    mask_bay = data.apply(baynorm_agreement, axis='columns')\n",
+    "    data_categories[\"baynorm_consistent\"] = mask_bay\n",
+    "\n",
+    "    return data_categories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>infeasible</th>\n",
+       "      <th>zero_lb</th>\n",
+       "      <th>decreasing_ub</th>\n",
+       "      <th>increasing_ub</th>\n",
+       "      <th>baynorm_consistent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   infeasible zero_lb decreasing_ub increasing_ub baynorm_consistent\n",
+       "0       False    True          True          True               True\n",
+       "1        True     NaN           NaN           NaN                NaN\n",
+       "2       False    True          True          True               True\n",
+       "3       False    True         False          True               True\n",
+       "4       False   False          True         False              False"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CAT_cast_concat = categorize(LP_cast_concat, prior_cast_concat)\n",
+    "CAT_cast_concat.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def summary_statistics(cat):\n",
+    "    total = cat.shape[0]\n",
+    "    infeasible = cat['infeasible'].sum()\n",
+    "    feasible = total - infeasible\n",
+    "    zero_lb = cat['zero_lb'].sum()\n",
+    "    non_zero_lb = feasible - zero_lb\n",
+    "    # within tolerance of non-increasing and non-decreasing => flat\n",
+    "    flat_ub = (cat['decreasing_ub'] + cat['increasing_ub'] == 2).sum()\n",
+    "    # only increasing / decreasing\n",
+    "    increasing_ub_only = cat['increasing_ub'].sum() - flat_ub\n",
+    "    decreasing_ub_only = cat['decreasing_ub'].sum() - flat_ub\n",
+    "    # outside tolerance of non-increasing and non-decreasing => peak / trough\n",
+    "    #mixed_ub = feasible - (flat_ub + increasing_ub_only + decreasing_ub_only)\n",
+    "    mixed_ub = (cat['decreasing_ub'] + cat['increasing_ub'] == 0).sum()\n",
+    "    # agreement with baynorm\n",
+    "    baynorm_agree = cat['baynorm_consistent'].sum()\n",
+    "    baynorm_not = feasible - baynorm_agree\n",
+    "\n",
+    "    print(f\"Feasible: {round(100 * feasible / total, 2)}\\n\" +\n",
+    "          f\"Infeasible: {round(100 * infeasible / total, 2)}\\n\" +\n",
+    "          f\"Of feasible:\\n\" +\n",
+    "          f\"Zero lower bound: {round(100 * zero_lb / feasible, 2)}\\n\" +\n",
+    "          f\"Non-zero lower bound: {round(100 * non_zero_lb / feasible, 2)}\\n\" +\n",
+    "          f\"Flat upper bound: {round(100 * flat_ub / feasible, 2)}\\n\" +\n",
+    "          f\"Increasing only upper bound: {round(100 * increasing_ub_only / feasible, 2)}\\n\" +\n",
+    "          f\"Decreasing only upper bound: {round(100 * decreasing_ub_only / feasible, 2)}\\n\" +\n",
+    "          f\"Mixed upper bound: {round(100 * mixed_ub / feasible, 2)}\\n\" +\n",
+    "          f\"BayNorm consistent: {round(100 * baynorm_agree / feasible, 2)}\\n\" +\n",
+    "          f\"Not BayNorm consistent: {round(100 * baynorm_not / feasible, 2)}\\n\"\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feasible: 92.05\n",
+      "Infeasible: 7.95\n",
+      "Of feasible:\n",
+      "Zero lower bound: 89.47\n",
+      "Non-zero lower bound: 10.53\n",
+      "Flat upper bound: 31.99\n",
+      "Increasing only upper bound: 27.91\n",
+      "Decreasing only upper bound: 22.56\n",
+      "Mixed upper bound: 17.65\n",
+      "BayNorm consistent: 89.86\n",
+      "Not BayNorm consistent: 10.14\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "summary_statistics(CAT_cast_concat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_categories_feasible = data_categories[data_categories['infeasible'] == False]\n",
+    "upper_bound_list = []\n",
+    "for i in range(data_categories_feasible.shape[0]):\n",
+    "    if data_categories_feasible['decreasing_ub'].iloc[i] == True:\n",
+    "        upper_bound_list.append(5)\n",
+    "    elif data_categories_feasible['increasing_ub'].iloc[i] == True:\n",
+    "        upper_bound_list.append(6)\n",
+    "    else:\n",
+    "        upper_bound_list.append(7)\n",
+    "\n",
+    "label_list = ['genes', 'feasible', 'infeasible', 'zero lb', 'non-zero lb', 'decreasing ub', 'increasing ub', 'mixture']\n",
+    "# all start at 0: 'genes'\n",
+    "source = [0 for i in range(data_categories.shape[0])] + \\\n",
+    "         [1 for i in range(data_categories_feasible.shape[0])] + \\\n",
+    "         [3 if flag else 4 for flag in data_categories_feasible['zero_lb']]\n",
+    "# True / False of category decides target\n",
+    "target = [2 if flag else 1 for flag in data_categories['infeasible']] + \\\n",
+    "         [3 if flag else 4 for flag in data_categories_feasible['zero_lb']] + \\\n",
+    "         upper_bound_list\n",
+    "# all have equal weight\n",
+    "count = [1 for i in source]\n",
+    "\n",
+    "fig = go.Figure(data=[go.Sankey(\n",
+    "    node = {\"label\": label_list},\n",
+    "    link = {\"source\": source, \"target\": target, \"value\": count, \"color\": \"lightgrey\"}\n",
+    "    )])\n",
+    "fig.update_layout(font_size=15)\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       x     y\n",
+       "0   True  True\n",
+       "1  False  True\n",
+       "2    NaN  True"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = pd.DataFrame({'x': [True, False, np.nan], 'y': [True, True, True]})\n",
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(A['x'] + A['y'] == 2).sum()"
    ]
   }
  ],
