--- a/upscaling_analysis.ipynb
+++ b/upscaling_analysis.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
        "[5 rows x 224 columns]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,6 +814,37 @@
     "# Posterior sample count data\n",
     "data_PS = pd.read_csv(\"..\\Data\\SS3_c57_UMIs_concat_PosteriorSamples.csv\", index_col=\"Unnamed: 0\")\n",
     "data_PS.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SS3_MAF_Leo171129_p2_S10.1      True\n",
+       "SS3_MAF_Leo171129_p2_S12.1      True\n",
+       "SS3_MAF_Leo171129_p2_S13.1      True\n",
+       "SS3_MAF_Leo171129_p2_S14.1      True\n",
+       "SS3_MAF_Leo171129_p2_S16.1      True\n",
+       "                                ... \n",
+       "SS3_MAF_leo180223_p4_S189.20    True\n",
+       "SS3_MAF_leo180223_p4_S188.20    True\n",
+       "SS3_MAF_leo180223_p4_S190.20    True\n",
+       "SS3_MAF_leo180223_p4_S98.20     True\n",
+       "SS3_MAF_leo180223_p4_S99.20     True\n",
+       "Name: Hdac1, Length: 4480, dtype: bool"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_PS.iloc[1483] == data_PS.loc['Hdac1']"
    ]
   },
   {
